--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -13,4 +13,74 @@
         <servlet-name>MainFormServlet</servlet-name>
         <servlet-class>org.ningf.ourpetstore.web.servlet.MainFormServlet</servlet-class>
     </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>CategoryFormServlet</servlet-name>
+        <url-pattern>/categoryForm</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>CategoryFormServlet</servlet-name>
+        <servlet-class>org.ningf.ourpetstore.web.servlet.CategoryFormServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>ProductFormServlet</servlet-name>
+        <url-pattern>/productForm</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ProductFormServlet</servlet-name>
+        <servlet-class>org.ningf.ourpetstore.web.servlet.ProductFormServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>ItemFormServlet</servlet-name>
+        <url-pattern>/itemForm</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ItemFormServlet</servlet-name>
+        <servlet-class>org.ningf.ourpetstore.web.servlet.ItemFormServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>AddItemToCartServlet</servlet-name>
+        <url-pattern>/addItemToCart</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>AddItemToCartServlet</servlet-name>
+        <servlet-class>org.ningf.ourpetstore.web.servlet.AddItemToCartServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>UpdateCartServlet</servlet-name>
+        <url-pattern>/updateCart</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>UpdateCartServlet</servlet-name>
+        <servlet-class>org.ningf.ourpetstore.web.servlet.UpdateCartServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>RemoveCartItemServlet</servlet-name>
+        <url-pattern>/removeCartItem</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>RemoveCartItemServlet</servlet-name>
+        <servlet-class>org.ningf.ourpetstore.web.servlet.RemoveCartItemServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>CartFormServlet</servlet-name>
+        <url-pattern>/cartForm</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>CartFormServlet</servlet-name>
+        <servlet-class>org.ningf.ourpetstore.web.servlet.CartFormServlet</servlet-class>
+    </servlet>
 </web-app>
