--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,7 +8,6 @@
         <servlet-name>MainFormServlet</servlet-name>
         <url-pattern>/mainForm</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>MainFormServlet</servlet-name>
         <servlet-class>org.ningf.ourpetstore.web.servlet.MainFormServlet</servlet-class>
@@ -18,7 +17,6 @@
         <servlet-name>CategoryFormServlet</servlet-name>
         <url-pattern>/categoryForm</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>CategoryFormServlet</servlet-name>
         <servlet-class>org.ningf.ourpetstore.web.servlet.CategoryFormServlet</servlet-class>
@@ -28,7 +26,6 @@
         <servlet-name>ProductFormServlet</servlet-name>
         <url-pattern>/productForm</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>ProductFormServlet</servlet-name>
         <servlet-class>org.ningf.ourpetstore.web.servlet.ProductFormServlet</servlet-class>
@@ -38,7 +35,6 @@
         <servlet-name>ItemFormServlet</servlet-name>
         <url-pattern>/itemForm</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>ItemFormServlet</servlet-name>
         <servlet-class>org.ningf.ourpetstore.web.servlet.ItemFormServlet</servlet-class>
@@ -48,7 +44,6 @@
         <servlet-name>AddItemToCartServlet</servlet-name>
         <url-pattern>/addItemToCart</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>AddItemToCartServlet</servlet-name>
         <servlet-class>org.ningf.ourpetstore.web.servlet.AddItemToCartServlet</servlet-class>
@@ -58,7 +53,6 @@
         <servlet-name>UpdateCartServlet</servlet-name>
         <url-pattern>/updateCart</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>UpdateCartServlet</servlet-name>
         <servlet-class>org.ningf.ourpetstore.web.servlet.UpdateCartServlet</servlet-class>
@@ -68,7 +62,6 @@
         <servlet-name>RemoveCartItemServlet</servlet-name>
         <url-pattern>/removeCartItem</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>RemoveCartItemServlet</servlet-name>
         <servlet-class>org.ningf.ourpetstore.web.servlet.RemoveCartItemServlet</servlet-class>
@@ -78,9 +71,35 @@
         <servlet-name>CartFormServlet</servlet-name>
         <url-pattern>/cartForm</url-pattern>
     </servlet-mapping>
-
     <servlet>
         <servlet-name>CartFormServlet</servlet-name>
         <servlet-class>org.ningf.ourpetstore.web.servlet.CartFormServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>SignOnFormServlet</servlet-name>
+        <url-pattern>/signOnForm</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>SignOnFormServlet</servlet-name>
+        <servlet-class>org.ningf.ourpetstore.web.servlet.SignOnFormServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>NewOrderFormServlet</servlet-name>
+        <url-pattern>/newOrderForm</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>NewOrderFormServlet</servlet-name>
+        <servlet-class>org.ningf.ourpetstore.web.servlet.NewOrderFormServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>SignOnServlet</servlet-name>
+        <url-pattern>/signOn</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>SignOnServlet</servlet-name>
+        <servlet-class>org.ningf.ourpetstore.web.servlet.SignOnServlet</servlet-class>
     </servlet>
 </web-app>
