完成搜索模块，但是搜索为空时的分支未完善

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -102,4 +102,13 @@
         <servlet-name>SignOnServlet</servlet-name>
         <servlet-class>org.ningf.ourpetstore.web.servlet.SignOnServlet</servlet-class>
     </servlet>
+
+    <servlet-mapping>
+        <servlet-name>SearchProductsFormServlet</servlet-name>
+        <url-pattern>/searchProductsForm</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>SearchProductsFormServlet</servlet-name>
+        <servlet-class>org.ningf.ourpetstore.web.servlet.SearchProductsFormServlet</servlet-class>
+    </servlet>
 </web-app>
