--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -201,4 +201,13 @@
         <servlet-name>ViewOrderFormServlet</servlet-name>
         <servlet-class>org.ningf.ourpetstore.web.servlet.order.ViewOrderFormServlet</servlet-class>
     </servlet>
+
+    <servlet-mapping>
+        <servlet-name>ProductAutoCompleteServlet</servlet-name>
+        <url-pattern>/productAuto</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>ProductAutoCompleteServlet</servlet-name>
+        <servlet-class>org.ningf.ourpetstore.web.servlet.catalog.ProductAutoCompleteServlet</servlet-class>
+    </servlet>
 </web-app>
