实现通过Axios动态修改购物车内容以及数据库

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -219,4 +219,13 @@
         <servlet-name>IsUserNameExistServlet</servlet-name>
         <servlet-class>org.ningf.ourpetstore.web.servlet.account.IsUserNameExistServlet</servlet-class>
     </servlet>
+
+    <servlet-mapping>
+        <servlet-name>CartAutoUpdateServlet</servlet-name>
+        <url-pattern>/cartAutoUpdate</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>CartAutoUpdateServlet</servlet-name>
+        <servlet-class>org.ningf.ourpetstore.web.servlet.cart.CartAutoUpdateServlet</servlet-class>
+    </servlet>
 </web-app>
